--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
