--- a/backend/.env
+++ b/backend/.env
@@ -3,8 +3,8 @@ PORT=5000
 NODE_ENV=development
 
 # MongoDB Configuration
-MONGODB_URI=mongodb+srv://kieuvanson03_db_user:AqwTY6zJ9y4aXz83@cluster0.khhcrvm.mongodb.net/?appName=Cluster0
+mongodb+srv://phamgiakhanhlc_db_user:VRhjCwQHR1lTptEP@cluster0.shivd9k.mongodb.net/
 
 # JWT Configuration
-ACCESS_TOKEN_SECRET=Rose
+ACCESS_TOKEN_SECRET=Khznh
 
