--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
