Clean up: remove test scripts

--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ PORT=5000
 NODE_ENV=development
 
 # MongoDB Configuration
-mongodb+srv://phamgiakhanhlc_db_user:VRhjCwQHR1lTptEP@cluster0.shivd9k.mongodb.net/
+MONGODB_URI=mongodb+srv://phamgiakhanhlc_db_user:D0TqJPUsxz6Xh4Yc@cluster0.b3dr91u.mongodb.net/emr
 
 # JWT Configuration
 ACCESS_TOKEN_SECRET=Khznh
